# Aind.Behavior.CopierTemplate

./: LICENSE  copier.yml
.github/workflows/: {{ _python_project_name }}-cicd.yml
aind-behavior-template/: LICENSE.jinja  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja
aind-behavior-template/.github/workflows/: {{  python_package_name }}-cicd.yml.jinja  {{ python_package_name }}-cicd.yml.jinja
aind-behavior-template/docs/: api.rig.rst.jinja  api.task_logic.rst  api.task_logic.rst.jinja  conf.py  conf.py.jinja  index.rst.jinja  json-schemas.rst  json-schemas.rst.jinja
aind-behavior-template/examples/: clabe.yml.jinja  rig.py  rig.py.jinja  session.py  session.py.jinja  task_logic.py  task_logic.py.jinja
aind-behavior-template/src/DataSchemas/: .gitkeep.jinja
aind-behavior-template/src/{{ _python_folder_name }}/: data_qc.py  launcher.py  regenerate.py  rig.py  rig.py.jinja  task_logic.py.jinja
aind-behavior-template/src/{{ _python_folder_name }}/data_contract/: __init__.py  __init__.py.jinja
aind-behavior-template/src/{{ _python_folder_name }}/data_mappers/: __init__.py.jinja  _rig.py  _session.py  _session.py.jinja
aind-behavior-template/src/{{ python_folder_name }}/: cli.py.jinja  data_qc.py.jinja  launcher.py.jinja  regenerate.py.jinja  rig.py.jinja  task_logic.py.jinja
aind-behavior-template/src/{{ python_folder_name }}/data_contract/: __init__.py.jinja
aind-behavior-template/src/{{ python_folder_name }}/data_mappers/: __init__.py.jinja  _rig.py.jinja  _session.py.jinja
aind-behavior-template/src/{{ python_folder_name }}/data_qc/: __init__.py.jinja  data_qc.py.jinja
aind-behavior-template/tests/: test_aind_data_mapper.py.jinja  test_bonsai.py  test_bonsai.py.jinja
docs/: api.rig.rst  api.task_logic.rst  conf.py  json-schemas.rst
examples/: clabe.yml  rig.py  task_logic.py
scripts/: launcher.ps1
src/: Extensions.csproj
src/{{ _python_folder_name }}/: cli.py  data_qc.py  task_logic.py
src/{{ _python_folder_name }}/data_mappers/: __init__.py
tests/: test_aind_data_mapper.py  test_bonsai.py
