[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "{{ _python_package_name }}"
description = "A library that defines AIND data schema for the {{ project_name }} experiment."
authors = [ {name = "{{ _author_name }}", email = "{{author_email}}"}]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]
version = "0.0.0-rc1"
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
  "aind_behavior_services>=0.12, <0.13",
  "pydantic-settings"
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/{{ _dotnet_full_name }}/"
Repository = "https://github.com/AllenNeuralDynamics/{{ _dotnet_full_name }}/"
Issues = "https://github.com/AllenNeuralDynamics/{{ _dotnet_full_name }}/issues"
Changelog = "https://github.com/AllenNeuralDynamics/{{ _dotnet_full_name }}/releases"

[project.optional-dependencies]

data = ["contraqctor<0.5.0"]

launcher = [
    "aind-clabe[aind-services]",
    "aind-data-schema>2",
    "{{ _python_package_name }}[data]",
    ]

[dependency-groups]

dev = [
    "{{ _python_package_name }}[launcher]",
    "{{ _python_package_name }}[data]",
    "ruff",
    "codespell"
]

docs = [
    'Sphinx',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema',
    "{{ _python_package_name }}[data]",  # Necessary for the data contract rendering
]

[project.scripts]
{{ project_name }} = "{{ _python_package_name }}.cli:main"

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock,*Generated.cs'
ignore-words-list = 'nd'

[tool.uv]
default-groups = ['dev']
required-version = '>=0.8.4'
